# Ticketmaster-Event-Scraper

./: .gitignore  LICENSE  README.md
ticketmaster-event-scraper/: Cargo.toml  response.json
ticketmaster-event-scraper/src/: Example Output 2.json  Example Output.json  dma.rs  main.rs
ticketmaster_scraper/: Cargo.toml
ticketmaster_scraper/src/: lib.rs  main.rs
