[package]
name = "ticketmaster-event-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Masson"]
description = "A package for getting concert dates from ticketmaster"
readme = "README.md"
repository = "https://github.com/josephmasson26/Ticketmaster-Event-Scraper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

