[package]
name = "ticketmaster_scraper"
version = "0.1.0"
authors = ["josephmasson26@gatech.edu"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew.git" }